# dde-app-services

./: CMakeLists.txt  README.md  README.zh_CN.md
.github/workflows/: test.yml
.reuse/: dep5
archlinux/: PKGBUILD
dconfig-center/: CMakeLists.txt
dconfig-center/common/: helper.hpp  valuehandler.cpp  valuehandler.h
dconfig-center/dconfig-daemon/: CMakeLists.txt  dconfig_global.h  dconfigconn.cpp  dconfigconn.h  dconfigrefmanager.cpp  dconfigrefmanager.h  dconfigserver.cpp  main.cpp  src.cmake
dconfig-center/dconfig-daemon/services/: dconfig-center-daemon.service  org.desktopspec.ConfigManager.conf  org.desktopspec.ConfigManager.service
dconfig-center/dconfig-editor/: CMakeLists.txt  helper.hpp  iteminfo.h  main.cpp  mainwindow.cpp  mainwindow.h  valuehandler.cpp
dconfig-center/dde-dconfig/: CMakeLists.txt  main.cpp  valuehandler.cpp
dconfig-center/dde-dconfig-daemon/: CMakeLists.txt  configpathresolver.cpp  configpathresolver.h  configsyncpolicy.h  dconfig_global.h  dconfig_types.h  dconfigconn.cpp  dconfigconn.h  dconfigrefmanager.cpp  dconfigrefmanager.h  dconfigresource.cpp  dconfigresource.h  dconfigserver.cpp  dconfigserver.h  dgeneralconfigmanager.cpp  dgeneralconfigmanager.h  inotifywatcher.cpp  inotifywatcher.h  main.cpp  servicelifecycle.cpp  servicelifecycle.h  src.cmake
dconfig-center/dde-dconfig-daemon/misc/deepin-debug-config/: dde-dconfig-daemon.json
dconfig-center/dde-dconfig-daemon/misc/deepin-log-config/: dde-dconfig-daemon.json
dconfig-center/dde-dconfig-daemon/scripts/: dconfig-trigger-handler  dde-dconfig-daemon-reload-handler
dconfig-center/dde-dconfig-daemon/services/: dconfig-center-daemon.service  dde-dconfig-daemon-tmpfiles.conf  dde-dconfig-daemon.service  org.desktopspec.ConfigManager.Manager.xml  org.desktopspec.ConfigManager.conf  org.desktopspec.ConfigManager.service  org.desktopspec.ConfigManager.xml
dconfig-center/dde-dconfig-editor/: CMakeLists.txt  exportdialog.cpp  exportdialog.h  iteminfo.cpp  main.cpp  mainwindow.cpp  mainwindow.h  oemdialog.cpp  oemdialog.h  valuehandler.cpp
dconfig-center/dde-dconfig-editor/translates/: dde-dconfig-editor_zh_CN.ts
dconfig-center/dde-dconfig/bash_completion.d/: dde-dconfig
dconfig-center/dde-dconfig/translates/: dde-dconfig_zh_CN.ts
dconfig-center/docs/: CMakeLists.txt  DtkConfig.zh_CN.md  org.desktopspec.ConfigManager.Manager.xml  org.desktopspec.ConfigManager.xml
dconfig-center/example/: CMakeLists.txt  dbus-dconfig.sh  dconfig-editor-console.sh  dde-dconfig.sh  example.pro  main.cpp  test-dde-dconfig-daemon.sh
dconfig-center/example/configs/: example.json
dconfig-center/tests/: CMakeLists.txt  main.cpp  test_helper.hpp  ut_dconfigconn.cpp  ut_dconfigrefmanager.cpp  ut_dconfigresource.cpp  ut_dconfigserver.cpp  ut_helper.cpp
dconfig-center/tests/config/: example.json
debian/: changelog  control  dconfig-daemon.install  dconfig-editor.install  dde-dconfig-daemon.install  dde-dconfig-daemon.postinst  dde-dconfig-daemon.triggers  dde-dconfig-doc.install  dde-dconfig-editor.install  postinst  rules
